--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "build-node",
+  "name": " Project-Infrastructure ",
   "packageManager": "yarn@3.2.3",
   "description": "",
   "version": "1.0.0",
