--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/twilio":"4.20.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jasmine": "^4.3.0",
@@ -49,6 +50,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "twilio":"4.20.0",
     "pg": "^8.8.0"
   }
 }
