--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": " Project-Infrastructure ",
   "packageManager": "yarn@3.2.3",
-  "main": "index.js",
+  "main": "./dist/index.js",
 "description": "",
   "engines": {
     "node": "16.13.2"
